fix: overflow y hidden to vertical scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,6 +66,7 @@
   .scroll-x-area {
     overflow-x: auto;
     overscroll-behavior-x: contain;
+    overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
   }
 }
